tests/snapshots/human_output__role_list_empty.snap
---
source: tests/human_output.rs
description: Role list with no rows.
---
$ dn role list
No roles found.
--- stderr
note: using <API_URL> (from DEFINED_API_URL)
